--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -5,8 +5,8 @@
 </div>
 
 
-<script src="js/vendor/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.6/js/foundation.min.js"></script>
 <script>
     $(document).foundation();
 </script>
