--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -16,7 +16,7 @@
     ga('send', 'pageview');
 
 </script>
-<div class="off-canvas-wrap">
+<div class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
         <nav class="top-bar hide-for-small" data-topbar>
             <ul class="title-area">
